--- a/research/ff.ipynb
+++ b/research/ff.ipynb
@@ -3176,10 +3176,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ff = keras.models.load_model('model.h5')\n",
+    "keras.utils.plot_model(ff, show_shapes=True, show_layer_names=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
