--- a/research/RNN/rnn.ipynb
+++ b/research/RNN/rnn.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -61,20 +61,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "heyoo\n",
-      "heyoo\n",
+      "# of articles: 567\n",
+      "# of Elementary articles: 189.0\n",
+      "# of Intermediate articles: 189.0\n",
+      "# of Advanced articles: 189.0\n",
+      "Example: \n",
       "Elementary\n",
-      "The bestselling book on Amazon in the US is a colouring books for adults by Scottish illustrator Johanna Basford.\n",
-      "Basfords pictures of animals and plants in Secret Garden have sold more than 1.4 million copies around the world and her next book, Enchanted Forest, has sold 226,000 copies already. The books have celebrity fans like Zooey Deschanel, who shared a link about the book with her Facebook followers, and the South Korean pop star Kim Ki-Bum, who posted an image on Instagram for his 1.6 million followers.\n",
-      "Its been crazy. The last few weeks have been madness, but fantastic madness, said Eleanor Blatherwick, head of sales and marketing at the books publisher, Laurence King. We knew the books would be beautiful but we didnt realize they would be such a big success.\n",
-      "And it is not just Basfords books that adults want to colour in. In the UK, Richard Merritts Art Therapy Colouring Book is in fourth place on Amazons bestseller lists, Millie Marottas Animal Kingdom  detailed pictures of animals to colour  is in seventh place and a mindfulness colouring book is in ninth place. Basfords books are in second and eighth place  so half of Amazon. co.uks top ten is filled by colouring books for adults.\n",
-      "Independent UK publisher Michael OMara has sold around 340,000 adult colouring books. Ana McLaughlin works for them. She says the craze has happened because they are telling people that the books will help them to relax. The first book we did was in 2012, Creative Colouring for Grown-Ups. It sold well but it was in 2014 that adult colouring books became really popular with Art Therapy. We tell people they are anti-stress books so people are allowed to enjoy something they thought was childish before, she said.\n",
-      "The Mindfulness Colouring Book says that it is filled with beautiful scenes and intricate, sophisticated patterns. This makes you relax as you fill these pages with colour. The book suggests that people take a few minutes, wherever you are, and colour your way to peace and calm.\n",
-      "I think it is really relaxing to unplug, said Basford. And its creative. For many people, a blank sheet of paper is very daunting; with a colouring book you just need to bring the colour. Also, people do it because they feel nostalgia for their childhoods. So many people have said to me that they used to do secret colouring in when their kids were in bed. Now, people dont feel silly. These are books for adults. The art in my books is super intricate. The illustrator, who lives in Aberdeenshire, is creating a third book.\n",
-      "The pictures are all over Twitter and Instagram. People are really proud of them  they are so intricate, she said. People send us pictures of them, said McLaughlin.\n",
-      "\n",
-      "\n",
-      "\n"
+      "When you see the word Amazon, whats the first thing you think of  the worlds biggest fore\n",
+      "Intermediate\n",
+      "When you see the word Amazon, whats the first thing you think of  the worlds biggest fo\n",
+      "Advanced\n",
+      "When you see the word Amazon, whats the first thing that springs to mind  the worlds bigges\n"
      ]
     }
    ],
@@ -83,43 +80,24 @@
     "sys.path.append(\"/home/ms10596/Documents/match\")\n",
     "from research.utils.one_stop_english import OneStopEnglish\n",
     "corpus = OneStopEnglish()\n",
-    "corpus.load_raw()\n",
-    "print(corpus.articles[55])"
+    "corpus.summary()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {
     "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7bb6b01a0f0b4e1bb00536d004483728",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=283, description='i', max=566), Output()), _dom_classes=('widget-interac…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "from __future__ import print_function\n",
-    "from ipywidgets import interact, interactive, fixed, interact_manual\n",
-    "import ipywidgets as widgets\n",
-    "@interact\n",
-    "def show_articles_more_than(i=(0, 566, 1)):\n",
-    "    return corpus.articles[i], corpus.articles[i+189], corpus.articles[i+189]\n",
-    "\n"
+    "Example of articles in the corpus:\n",
+    "\n",
+    "| Reading Level | Example |\n",
+    "| --- | --- |\n",
+    "| Advanced (Adv)| Amsterdam still looks liberal to tourists, who were recently assured by the Labour Mayor that the city’s marijuana-selling coffee shops would stay open despite a new national law tackling drug tourism. But the Dutch capital may lose its reputation for tolerance over plans to dispatch nuisance neighbours to scum villages made from shipping containers. |\n",
+    "| Intermediate (Int) | To tourists, Amsterdam still seems very liberal. Recently the city’s Mayor assured them that the city’s marijuana-selling coffee shops would stay open despite a new national law to prevent drug tourism. But the Dutch capitals plans to send nuisance neighbours to scum villages made from shipping containers may damage its reputation for tolerance. |\n",
+    "| Elementary (Ele) | To tourists, Amsterdam still seems very liberal. Recently the city’s Mayor told them that the coffee shops that sell marijuana would stay open, although there is a new national law to stop drug tourism. But the Dutch capital has a plan to send antisocial neighbours to scum villages made from shipping containers, and so maybe now people wont think it is a liberal city any more. |"
    ]
   },
   {
@@ -151,10 +129,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
