feat: moving examples of articles

--- a/research/RNN/rnn.ipynb
+++ b/research/RNN/rnn.ipynb
@@ -22,7 +22,7 @@
     }
    },
    "source": [
-    "## 1. Corpus\n",
+    "## Corpus\n",
     "> OneStopEnglish corpus: A new corpus for automatic readability assessment and text simplification  \n",
     "> Sowmya Vajjala and Ivana Lučić  \n",
     "> 2018  \n",
@@ -62,16 +62,9 @@
      "output_type": "stream",
      "text": [
       "# of articles: 567\n",
-      "# of Elementary articles: 189.0\n",
-      "# of Intermediate articles: 189.0\n",
-      "# of Advanced articles: 189.0\n",
-      "Example: \n",
-      "Elementary\n",
-      "When you see the word Amazon, whats the first thing you think of  the worlds biggest fore\n",
-      "Intermediate\n",
-      "When you see the word Amazon, whats the first thing you think of  the worlds biggest fo\n",
-      "Advanced\n",
-      "When you see the word Amazon, whats the first thing that springs to mind  the worlds bigges\n"
+      "# of Elementary articles: 189\n",
+      "# of Intermediate articles: 189\n",
+      "# of Advanced articles: 189\n"
      ]
     }
    ],
@@ -80,24 +73,39 @@
     "sys.path.append(\"/home/ms10596/Documents/match\")\n",
     "from research.utils.one_stop_english import OneStopEnglish\n",
     "corpus = OneStopEnglish()\n",
-    "corpus.summary()"
+    "corpus.summary()\n",
+    "i = 0"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b3a66e7e46d4440590b31f85f1ed84cb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=94, description='i', max=188), IntSlider(value=500, description='words',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
-   },
+   ],
    "source": [
-    "Example of articles in the corpus:\n",
-    "\n",
-    "| Reading Level | Example |\n",
-    "| --- | --- |\n",
-    "| Advanced (Adv)| Amsterdam still looks liberal to tourists, who were recently assured by the Labour Mayor that the city’s marijuana-selling coffee shops would stay open despite a new national law tackling drug tourism. But the Dutch capital may lose its reputation for tolerance over plans to dispatch nuisance neighbours to scum villages made from shipping containers. |\n",
-    "| Intermediate (Int) | To tourists, Amsterdam still seems very liberal. Recently the city’s Mayor assured them that the city’s marijuana-selling coffee shops would stay open despite a new national law to prevent drug tourism. But the Dutch capitals plans to send nuisance neighbours to scum villages made from shipping containers may damage its reputation for tolerance. |\n",
-    "| Elementary (Ele) | To tourists, Amsterdam still seems very liberal. Recently the city’s Mayor told them that the coffee shops that sell marijuana would stay open, although there is a new national law to stop drug tourism. But the Dutch capital has a plan to send antisocial neighbours to scum villages made from shipping containers, and so maybe now people wont think it is a liberal city any more. |"
+    "@interact\n",
+    "def show_articles(i=(0,188,1), words=(0,1000,1)):\n",
+    "    data = [\n",
+    "        [\"Advanced\",corpus.articles[i+189+189][:words]], \n",
+    "        [\"Intermediate\",corpus.articles[i+189][:words]], \n",
+    "        [\"Elementary\",corpus.articles[i][:words]]\n",
+    "    ]\n",
+    "    display(HTML(tabulate(data,tablefmt='html')))"
    ]
   },
   {
@@ -129,10 +137,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
