feat: descriptive stat of the corpus

--- a/research/RNN/rnn.ipynb
+++ b/research/RNN/rnn.ipynb
@@ -2,14 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Readability Assessment through Recurrent Neural Network"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Readability assessment is a well known problem in natural language processing field. Giving someone the suitable text for his level of comprehension (not so easy and not so hard) could maximize his understanding and enjoyment. In this notebook we are trying to assess the readability of a given text regardless of the text subject using recurrent neural network."
    ]
@@ -19,6 +27,9 @@
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
+    },
+    "slideshow": {
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -41,6 +52,9 @@
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
+    },
+    "slideshow": {
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -49,43 +63,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {
     "pycharm": {
      "is_executing": false,
      "name": "#%%\n"
+    },
+    "slideshow": {
+     "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# of articles: 567\n",
-      "# of Elementary articles: 189\n",
-      "# of Intermediate articles: 189\n",
-      "# of Advanced articles: 189\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from __future__ import print_function\n",
     "import sys\n",
     "sys.path.append(\"/home/ms10596/Documents/match\")\n",
+    "from ipywidgets import interact, interactive, fixed, interact_manual\n",
+    "import ipywidgets as widgets\n",
     "from research.utils.one_stop_english import OneStopEnglish\n",
-    "corpus = OneStopEnglish()\n",
-    "corpus.summary()\n",
-    "i = 0"
+    "from tabulate import tabulate\n",
+    "from IPython.display import display, HTML\n",
+    "corpus = OneStopEnglish()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reading level|Avg. Num. Words|Std. Dev|Number of Articles\n",
+    "---|---|---|---\n",
+    "Elementary|533.17|103.79|189\n",
+    "Intermediate|676.59|117.15|189\n",
+    "Advanced|820.49|162.52|189\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3a66e7e46d4440590b31f85f1ed84cb",
+       "model_id": "60e080e6af054877b89b25f355306eea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -105,7 +130,8 @@
     "        [\"Intermediate\",corpus.articles[i+189][:words]], \n",
     "        [\"Elementary\",corpus.articles[i][:words]]\n",
     "    ]\n",
-    "    display(HTML(tabulate(data,tablefmt='html')))"
+    "    headers = ['Reading Level', 'Example']\n",
+    "    display(HTML(tabulate(data,tablefmt='html', headers=headers)+\"<style>th,td {font-size: 30px}</style>\"))"
    ]
   },
   {
