feat: load glove

--- a/research/RNN/rnn.ipynb
+++ b/research/RNN/rnn.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -83,6 +83,7 @@
     "from research.utils.one_stop_english import OneStopEnglish\n",
     "from tabulate import tabulate\n",
     "from IPython.display import display, HTML\n",
+    "from research.utils.loading import load_glove_embeddings\n",
     "corpus = OneStopEnglish()"
    ]
   },
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -110,7 +111,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60e080e6af054877b89b25f355306eea",
+       "model_id": "f56d90b8a9864acf8af679a083df25e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -131,7 +132,32 @@
     "        [\"Elementary\",corpus.articles[i][:words]]\n",
     "    ]\n",
     "    headers = ['Reading Level', 'Example']\n",
-    "    display(HTML(tabulate(data,tablefmt='html', headers=headers)+\"<style>th,td {font-size: 30px}</style>\"))"
+    "    display(HTML(tabulate(data,tablefmt='html', headers=headers)+\"<style>th,td {font-size: 10px}</style>\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0.418' '0.24968' '-0.41242' '0.1217' '0.34527' '-0.044457' '-0.49688'\n",
+      " '-0.17862' '-0.00066023' '-0.6566' '0.27843' '-0.14767' '-0.55677'\n",
+      " '0.14658' '-0.0095095' '0.011658' '0.10204' '-0.12792' '-0.8443'\n",
+      " '-0.12181' '-0.016801' '-0.33279' '-0.1552' '-0.23131' '-0.19181'\n",
+      " '-1.8823' '-0.76746' '0.099051' '-0.42125' '-0.19526' '4.0071' '-0.18594'\n",
+      " '-0.52287' '-0.31681' '0.00059213' '0.0074449' '0.17778' '-0.15897'\n",
+      " '0.012041' '-0.054223' '-0.29871' '-0.15749' '-0.34758' '-0.045637'\n",
+      " '-0.44251' '0.18785' '0.0027849' '-0.18411' '-0.11514' '-0.78581']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = load_glove_embeddings()\n",
+    "print(x['the'])"
    ]
   },
   {
