notebook: sequence layer and padding

--- a/research/RNN/rnn.ipynb
+++ b/research/RNN/rnn.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -84,6 +84,7 @@
     "from tabulate import tabulate\n",
     "from IPython.display import display, HTML\n",
     "from research.utils.loading import load_glove_embeddings\n",
+    "from tensorflow import keras\n",
     "corpus = OneStopEnglish()"
    ]
   },
@@ -101,23 +102,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
+    },
+    "pycharm": {
+     "is_executing": false
     }
    },
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0992278be684ee58d7d47aabd44183c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=94, description='i', max=188), IntSlider(value=500, description='words',…"
-      ]
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<table>\n<thead>\n<tr><th>Reading Level  </th><th>Example                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            </th></tr>\n</thead>\n<tbody>\n<tr><td>Advanced       </td><td>It has been called the hotel of mum and dad but few guesthouses have such favourable terms. As the housing crisis bites, a fifth of young adults are staying in the family home until they are at least 26 and the same proportion are not paying a penny towards their keep. A recent survey found that the proportion of adults living at home varied around the country, from just under 9% in the East Midlands to more than double that in London, where house prices and rents are highest. While many around</td></tr>\n<tr><td>Intermediate   </td><td>Some people call it the hotel of mum and dad. A fifth of young adults are staying in the family home until they are at least 26 and the same proportion are not paying a penny towards their keep. A recent survey found that the proportion of adults living at home varied around the country, from just under 9% in the East Midlands to more than double that in London, where house prices and rents are highest. While many around the country contributed financially, it found that 20% were paying nothing</td></tr>\n<tr><td>Elementary     </td><td>A fifth of young adults in the UK are staying in the family home until they are at least 26 and a fifth are not paying any rent. A recent survey found that the percentage of adults who live at home was different in different parts of the country  it was less than 9% in the East Midlands and more than double that in London, where house prices and rents are highest. Many young people pay their parents some money to live at home but 20% pay nothing at all.\nYoung adults are suffering from low wages                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    </td></tr>\n</tbody>\n</table><style>th,td {font-size: 10px}</style>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -144,19 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7738e8a859c442a5bfa1ee827e0fc980",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=30, description='i', max=60), Output()), _dom_classes=('widget-interact'…"
-      ]
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<table>\n<tbody>\n<tr><td>Adjectives (ADJ) like warm, fat                                        </td></tr>\n<tr><td>Adverbs (ADV) like almost, too, very                                   </td></tr>\n<tr><td>Articles (ART) like a, an, the                                         </td></tr>\n<tr><td>Conjunctions (CONJ) like for, and, nor                                 </td></tr>\n<tr><td>Interjections (INTERJ) like wow, oops, ouch                            </td></tr>\n<tr><td>Nouns (NOUN) like boy, girl, doctor, town                              </td></tr>\n<tr><td>Numerals (NUM) like 1, 155, 89                                         </td></tr>\n<tr><td>Past participles (PASTPART) like taken, eaten                          </td></tr>\n<tr><td>Prepositions (PREP) like at, for, in, off                              </td></tr>\n<tr><td>Pronouns (PRON) like he, she, you, I                                   </td></tr>\n<tr><td>Punctuation (PUNCT) like ?, :, ;, .                                    </td></tr>\n<tr><td>Special symbols (SYMBOL) like @, %,                                    </td></tr>\n<tr><td>Adjectives (ADJ) like warm, fat                                        </td></tr>\n<tr><td>Adverbs (ADV) like almost, too, very                                   </td></tr>\n<tr><td>Articles (ART) like a, an, the                                         </td></tr>\n<tr><td>Conjunctions (CONJ) like for, and, nor                                 </td></tr>\n<tr><td>Interjections (INTERJ) like wow, oops, ouch                            </td></tr>\n<tr><td>Nouns (NOUN) like boy, girl, doctor, town                              </td></tr>\n<tr><td>Numerals (NUM) like 1, 155, 89                                         </td></tr>\n<tr><td>Past participles (PASTPART) like taken, eaten                          </td></tr>\n<tr><td>Prepositions (PREP) like at, for, in, off                              </td></tr>\n<tr><td>Pronouns (PRON) like he, she, you, I                                   </td></tr>\n<tr><td>Punctuation (PUNCT) like ?, :, ;, .                                    </td></tr>\n<tr><td>Special symbols (SYMBOL) like @, %,                                    </td></tr>\n<tr><td>Nominal phrases (NP) like The dog on the sofa                          </td></tr>\n<tr><td>Adjectival phrases (AP) like The movie was terrible                    </td></tr>\n<tr><td>Prepositional phrases (PP) like We stayed by the river                 </td></tr>\n<tr><td>Adverbial phrases (ADVP) like The carpenter hit the nail with a hammer.</td></tr>\n<tr><td>Temporal auxiliary verb phrases (VTEMP) like I was wondering about.    </td></tr>\n<tr><td>Aspectual auxiliary verb phrases (VASP) l have seen the light          </td></tr>\n</tbody>\n</table><style>th,td {font-size: 10px}</style>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -183,13 +179,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Word Embedding"
+    "## Word Embedding\n",
+    "So now we need a good representation of words that could match each word to a number or group of numbers so that they keep some of the semantic properties and similarities"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['-0.7001', '0.36781', '0.34424', '-0.42318', '-0.046018',\n",
+       "       '-0.66072', '-0.33993', '0.18271', '-0.92863', '0.5684',\n",
+       "       '-0.43819', '0.70827', '-0.47459', '-0.079269', '1.0187', '0.2213',\n",
+       "       '0.43073', '0.76719', '0.18774', '-0.49214', '-0.53063', '0.56379',\n",
+       "       '0.63571', '0.64622', '1.2649', '-0.82901', '-1.3903', '0.3749',\n",
+       "       '0.61316', '-1.5994', '1.3005', '0.64347', '-0.58004', '1.0372',\n",
+       "       '-0.27156', '-0.43382', '0.8554', '-0.8967', '0.80176', '-0.33333',\n",
+       "       '-0.17654', '-0.12277', '-0.70508', '-0.28412', '0.71149',\n",
+       "       '-0.13487', '0.049514', '-0.8134', '0.34293', '1.0381'],\n",
+       "      dtype='<U9')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glove = load_glove_embeddings()\n",
+    "glove['hey']\n",
+    "# todo plot embeddings and show relations between words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Found 16276 unique tokens.\nShape of data tensor: (567, 100)\nShape of label tensor: (567,)\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "import numpy as np\n",
+    "maxlen = 100 \n",
+    "# Cuts off reviews after 100 words\n",
+    "training_samples = 450\n",
+    "validation_samples = 117\n",
+    "max_words = 10000\n",
+    "tokenizer = Tokenizer(num_words=max_words)\n",
+    "tokenizer.fit_on_texts(corpus.articles)\n",
+    "sequences = tokenizer.texts_to_sequences(corpus.articles)\n",
+    "word_index = tokenizer.word_index\n",
+    "print('Found %s unique tokens.' % len(word_index))\n",
+    "data = pad_sequences(sequences, maxlen=maxlen)\n",
+    "labels = np.asarray(corpus.tags)\n",
+    "print('Shape of data tensor:', data.shape)\n",
+    "print('Shape of label tensor:', labels.shape)\n",
+    "indices = np.arange(data.shape[0])\n",
+    "np.random.shuffle(indices)\n",
+    "data = data[indices]\n",
+    "labels = labels[indices]\n",
+    "x_train= data[:training_samples]\n",
+    "y_train= labels[:training_samples]\n",
+    "x_val =data[training_samples: training_samples + validation_samples]\n",
+    "y_val =labels[training_samples: training_samples + validation_samples]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": []
   }
@@ -215,10 +292,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
