feat: ensure working GPU

--- a/research/RNN/rnn.ipynb
+++ b/research/RNN/rnn.ipynb
@@ -76,15 +76,14 @@
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
+    "\n",
     "import sys\n",
     "sys.path.append(\"/home/ms10596/Documents/match\")\n",
-    "from ipywidgets import interact, interactive, fixed, interact_manual\n",
-    "import ipywidgets as widgets\n",
+    "from ipywidgets import interact\n",
     "from research.utils.one_stop_english import OneStopEnglish\n",
     "from tabulate import tabulate\n",
     "from IPython.display import display, HTML\n",
     "from research.utils.loading import load_glove_embeddings\n",
-    "from tensorflow import keras\n",
     "corpus = OneStopEnglish()"
    ]
   },
@@ -185,27 +184,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array(['-0.7001', '0.36781', '0.34424', '-0.42318', '-0.046018',\n",
-       "       '-0.66072', '-0.33993', '0.18271', '-0.92863', '0.5684',\n",
-       "       '-0.43819', '0.70827', '-0.47459', '-0.079269', '1.0187', '0.2213',\n",
-       "       '0.43073', '0.76719', '0.18774', '-0.49214', '-0.53063', '0.56379',\n",
-       "       '0.63571', '0.64622', '1.2649', '-0.82901', '-1.3903', '0.3749',\n",
-       "       '0.61316', '-1.5994', '1.3005', '0.64347', '-0.58004', '1.0372',\n",
-       "       '-0.27156', '-0.43382', '0.8554', '-0.8967', '0.80176', '-0.33333',\n",
-       "       '-0.17654', '-0.12277', '-0.70508', '-0.28412', '0.71149',\n",
-       "       '-0.13487', '0.049514', '-0.8134', '0.34293', '1.0381'],\n",
-       "      dtype='<U9')"
-      ]
+      "text/plain": "array([-0.7001  ,  0.36781 ,  0.34424 , -0.42318 , -0.046018, -0.66072 ,\n       -0.33993 ,  0.18271 , -0.92863 ,  0.5684  , -0.43819 ,  0.70827 ,\n       -0.47459 , -0.079269,  1.0187  ,  0.2213  ,  0.43073 ,  0.76719 ,\n        0.18774 , -0.49214 , -0.53063 ,  0.56379 ,  0.63571 ,  0.64622 ,\n        1.2649  , -0.82901 , -1.3903  ,  0.3749  ,  0.61316 , -1.5994  ,\n        1.3005  ,  0.64347 , -0.58004 ,  1.0372  , -0.27156 , -0.43382 ,\n        0.8554  , -0.8967  ,  0.80176 , -0.33333 , -0.17654 , -0.12277 ,\n       -0.70508 , -0.28412 ,  0.71149 , -0.13487 ,  0.049514, -0.8134  ,\n        0.34293 ,  1.0381  ], dtype=float32)"
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "execute_result",
+     "execution_count": 19
     }
    ],
    "source": [
@@ -261,14 +253,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
+   "outputs": [
+    {
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-821c6055278d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0membedding_vector\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mglove\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0membedding_vector\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0membedding_matrix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0membedding_vector\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: index 16276 is out of bounds for axis 0 with size 10000"
+     ],
+     "ename": "IndexError",
+     "evalue": "index 16276 is out of bounds for axis 0 with size 10000",
+     "output_type": "error"
+    }
+   ],
+   "source": [
+    "embedding_dim = 50\n",
+    "embedding_matrix = np.zeros((max_words, embedding_dim))\n",
+    "for word, i in word_index.items():\n",
+    "    if i < max_words:\n",
+    "        embedding_vector = glove.get(word)\n",
+    "        if embedding_vector is not None:\n",
+    "            embedding_matrix[i] = embedding_vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "outputs": [],
-   "source": []
+   "source": [
+    "import tensorflow as tf\n",
+    "sess = tf.Session(config=tf.ConfigProto(log_device_placement=True))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
   }
  ],
  "metadata": {
