refactor: remove unneeded if condition

--- a/research/RNN/rnn.ipynb
+++ b/research/RNN/rnn.ipynb
@@ -265,9 +265,7 @@
     "embedding_matrix = np.zeros((max_words, embedding_dim))\n",
     "for word, i in word_index.items():\n",
     "    if i < max_words:\n",
-    "        embedding_vector = glove.get(word)\n",
-    "        if embedding_vector is not None:\n",
-    "            embedding_matrix[i] = embedding_vector"
+    "        embedding_matrix[i] = glove.get(word)"
    ]
   },
   {
