matching notebook with the new functions

--- a/RNN/rnn.ipynb
+++ b/RNN/rnn.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -80,7 +80,7 @@
     "from IPython.display import display, HTML\n",
     "\n",
     "from utils.loading import load_glove_embeddings\n",
-    "from utils.one_stop_english import OneStopEnglish\n",
+    "from utils.one_stop_english import load_corpus, corpus_to_words, corpus_to_pos\n",
     "\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
@@ -89,8 +89,9 @@
     "from tensorflow.keras.layers import Embedding, Flatten, Dense, LSTM, Bidirectional\n",
     "import numpy as np\n",
     "\n",
-    "corpus = OneStopEnglish()\n",
-    "glove = load_glove_embeddings()"
+    "glove = load_glove_embeddings()\n",
+    "corpus = load_corpus()\n",
+    "articles, tags = corpus_to_words(corpus)"
    ]
   },
   {
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": true
@@ -120,7 +121,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9e698e8d3b945f8a507e1ebe7991b50",
+       "model_id": "fbb5fb4d113e4c1bbddc6c6bd23419c7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -136,9 +137,9 @@
     "@interact\n",
     "def show_articles(i=(0,188,1), words=(0,1000,1)):\n",
     "    data = [\n",
-    "        [\"Advanced\",corpus.articles[i+189+189][:words]], \n",
-    "        [\"Intermediate\",corpus.articles[i+189][:words]], \n",
-    "        [\"Elementary\",corpus.articles[i][:words]]\n",
+    "        [\"Advanced\",articles[i][:words]], \n",
+    "        [\"Intermediate\",articles[i+2][:words]], \n",
+    "        [\"Elementary\",articles[i+1][:words]]\n",
     "    ]\n",
     "    headers = ['Reading Level', 'Example']\n",
     "    display(HTML(tabulate(data,tablefmt='html', headers=headers)+\"<style>th,td {font-size: 10px}</style>\"))"
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -163,7 +164,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84380718d8334200a345bf9bf55beacc",
+       "model_id": "1cd5c07706034dc099f4909214ed66da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -202,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -223,7 +224,7 @@
        "        0.34293 ,  1.0381  ], dtype=float32)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -246,7 +247,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 16276 unique tokens.\n",
       "Shape of data tensor: (567, 1000)\n",
       "Shape of label tensor: (567, 3)\n"
      ]
@@ -258,13 +258,10 @@
     "validation_samples = 117\n",
     "max_words = 20000\n",
     "tokenizer = Tokenizer(num_words=max_words)\n",
-    "tokenizer.fit_on_texts(corpus.articles)\n",
-    "sequences = tokenizer.texts_to_sequences(corpus.articles)\n",
-    "one_hot_results = tokenizer.texts_to_matrix(corpus.articles, mode='binary')\n",
-    "word_index = tokenizer.word_index\n",
-    "print('Found %s unique tokens.' % len(word_index))\n",
+    "tokenizer.fit_on_texts(articles)\n",
+    "sequences = tokenizer.texts_to_sequences(articles)\n",
     "data = pad_sequences(sequences, maxlen=maxlen)\n",
-    "labels = to_categorical(corpus.tags)\n",
+    "labels = to_categorical(tags)\n",
     "print('Shape of data tensor:', data.shape)\n",
     "print('Shape of label tensor:', labels.shape)\n",
     "indices = np.arange(data.shape[0])\n",
@@ -274,18 +271,32 @@
     "x_train= data[:training_samples]\n",
     "y_train= labels[:training_samples]\n",
     "x_val =data[training_samples:]\n",
-    "y_val =labels[training_samples:]"
+    "y_val =labels[training_samples:]\n",
+    "# print(data)\n",
+    "# print(tokenizer.word_index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'word_index' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-fb63ca41f16b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0membedding_dim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m50\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0membedding_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax_words\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0membedding_dim\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mword_index\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mmax_words\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0membedding_matrix\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mglove\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'word_index' is not defined"
+     ]
+    }
+   ],
    "source": [
     "embedding_dim = 50\n",
     "embedding_matrix = np.zeros((max_words, embedding_dim))\n",
