understanding keras tokenizer

--- a/RNN/rnn.ipynb
+++ b/RNN/rnn.ipynb
@@ -84,7 +84,7 @@
     "from IPython.display import display, HTML\n",
     "\n",
     "from utils.loading import load_glove_embeddings\n",
-    "from utils.one_stop_english import load_corpus, corpus_to_words, corpus_to_pos\n",
+    "from utils.one_stop_english import load_corpus, corpus_to_words, corpus_to_pos, detokenize\n",
     "\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
@@ -145,9 +145,9 @@
     "@interact\n",
     "def show_articles(i=(0,188,1), words=(0,1000,1)):\n",
     "    data = [\n",
-    "        [\"Advanced\",articles[i][:words]], \n",
-    "        [\"Intermediate\",articles[i+2][:words]], \n",
-    "        [\"Elementary\",articles[i+1][:words]]\n",
+    "        [\"Advanced\",detokenize(articles[i][:words])], \n",
+    "        [\"Intermediate\",detokenize(articles[i+2][:words])], \n",
+    "        [\"Elementary\",detokenize(articles[i+1][:words])]\n",
     "    ]\n",
     "    headers = ['Reading Level', 'Example']\n",
     "    display(HTML(tabulate(data,tablefmt='html', headers=headers)+\"<style>th,td {font-size: 30px}</style>\"))"
@@ -818,10 +818,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
